# tolstoy

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  style.yml
include/: tolstoy.hpp
include/tolstoy/: json.hpp  tolstoy.hpp  tsv.hpp
test/: CMakeLists.txt  json_test.cpp  main.cpp  text_test.cpp  tsv_test.cpp
